# collab

./: .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  build-compose.yml  docker-compose.yml  manage.py  requirements.txt  setup.cfg
.github/: CODEOWNERS
.github/workflows/: build.yaml
collab/: asgi.py  hosts.py  wsgi.py
collab/settings/: base.py  development.py  production.py  test.py
collab/urls/: admin.py  api.py  debug.py
documents/: admin.py  consumers.py  factories.py  middleware.py  models.py  permissions.py  routing.py  serializers.py  urls.py  utils.py  views.py
documents/migrations/: 0001_initial.py  0002_alter_document_author.py
documents/tests/: conftest.py  test_admin.py  test_models.py  test_views.py
lambda/: Dockerfile
users/: admin.py  authentication.py  exceptions.py  factories.py  forms.py  managers.py  middleware.py  models.py  serializer_fields.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: conftest.py  test_forms.py  test_managers.py  test_models.py  test_views.py
users/utils/: jwt.py
utils/: helpers.py  permissions.py
