[metadata]
name = Collab
author = Arif Ipek
author_email = arif@ipek.dev

[flake8]
max-line-length = 119
max-complexity = 12
ignore =
    F403,
    F405,
    W503
exclude = */migrations/*,.git

[isort]
default_section = THIRDPARTY
known_first_party = collab
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[options]
python_requires >= 3.8

[tool:pytest]
DJANGO_SETTINGS_MODULE = collab.settings.test
addopts =
    --verbose

[coverage:report]
skip_empty = True

[coverage:run]
plugins =
    django_coverage_plugin
omit =
    manage.py
    */migrations/*
    */static/*
    */templates/*
    */asgi.py
    */wsgi.py
    collab/settings/production.py
    collab/settings/development.py
    collab/urls/*.py
    *.txt
